@@ -2,9 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-      <groupId>org.sonatype.oss</groupId>
-      <artifactId>oss-parent</artifactId>
-      <version>5</version>
+      <groupId>org.cloudhoist</groupId>
+      <artifactId>pallet-pom</artifactId>
+      <version>0.4.0-SNAPSHOT</version>
+      <relativePath>../pallet-pom</relativePath>
     </parent>
     <groupId>org.cloudhoist</groupId>
     <artifactId>pallet</artifactId>
@@ -66,122 +67,21 @@
             </testResource>
         </testResources>
         <plugins>
-            <plugin>
-                <groupId>com.theoryinpractise</groupId>
-                <artifactId>clojure-maven-plugin</artifactId>
-                <version>1.3.4</version>
-                <configuration>
-                    <sourceDirectories>
-                        <sourceDirectory>src</sourceDirectory>
-                    </sourceDirectories>
-                    <testSourceDirectories>
-                        <testSourceDirectory>test</testSourceDirectory>
-                    </testSourceDirectories>
-                    <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
-                    <warnOnReflection>true</warnOnReflection>
-                    <testDeclaredNamespaceOnly>false</testDeclaredNamespaceOnly>
-                    <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
-                    <!-- we want the AOT compile sanity check, but still only ship source -->
-                    <outputDirectory>${project.build.directory}/clojure-classes</outputDirectory>
-                </configuration>
-                <executions>
-                  <execution>
-                    <id>test-clojure</id>
-                    <phase>test</phase>
-                    <goals>
-                      <goal>test</goal>
-                    </goals>
-                  </execution>
-                </executions>
-            </plugin>
-            <plugin>
-              <artifactId>maven-jar-plugin</artifactId>
-              <version>2.3.1</version>
-              <configuration>
-                <excludes>
-                  <exclude>log4j.xml</exclude>
-                </excludes>
-              </configuration>
-              <executions>
-                <execution>
-                  <id>test-jar</id>
-                  <goals>
-                    <goal>test-jar</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>
-            <plugin>
-                <!-- NOTE: We don't need a groupId specification because the group is
-           org.apache.maven.plugins ...which is assumed by default.
-          -->
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-beta-5</version>
-                <configuration>
-                    <outputDirectory>${project.basedir}</outputDirectory>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>lib</finalName>
-                    <descriptorSourceDirectory>${project.basedir}/assembly</descriptorSourceDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-              <artifactId>maven-enforcer-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>enforce-banned-dependencies</id>
-                  <goals>
-                    <goal>enforce</goal>
-                  </goals>
-                  <configuration>
-                    <rules>
-                      <bannedDependencies>
-                        <excludes>
-                          <exclude>:maven-dependency-plugin</exclude>
-                        </excludes>
-                      </bannedDependencies>
-                    </rules>
-                  </configuration>
-                </execution>
-                <execution>
-                  <id>enforce-java</id>
-                  <goals>
-                    <goal>enforce</goal>
-                  </goals>
-                  <configuration>
-                    <rules>
-                      <requireJavaVersion>
-                        <version>[1.6,)</version>
-                      </requireJavaVersion>
-                      <requireMavenVersion>
-                        <version>[2.2.1,)</version>
-                      </requireMavenVersion>
-                    </rules>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-          <extensions>
-          <!-- Enabling the use of SSH -->
-          <extension>
-            <groupId>org.apache.maven.wagon</groupId>
-            <artifactId>wagon-ssh-external</artifactId>
-            <version>1.0-beta-6</version>
-          </extension>
-        </extensions>
+          <plugin>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.3.1</version>
+            <executions>
+              <execution>
+                <id>test-jar</id>
+                <goals>
+                  <goal>test-jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
     </build>
     <dependencies>
-        <dependency>
-          <groupId>org.clojure</groupId>
-          <artifactId>clojure</artifactId>
-          <version>1.2.0</version>
-        </dependency>
-        <dependency>
-          <groupId>org.clojure</groupId>
-          <artifactId>clojure-contrib</artifactId>
-          <version>1.2.0</version>
-        </dependency>
-
         <dependency>
             <groupId>clj-http</groupId>
             <artifactId>clj-http</artifactId>
@@ -225,6 +125,12 @@
          <version>1.2.1</version>
          <optional>true</optional>
         </dependency>
+        <!-- <dependency> -->
+        <!--   <groupId>autodoc</groupId> -->
+        <!--   <artifactId>autodoc</artifactId> -->
+        <!--   <version>0.7.1</version> -->
+        <!--   <optional>true</optional> -->
+        <!-- </dependency> -->
     </dependencies>
 
     <repositories>
@@ -410,6 +316,32 @@
                   <namespace>!pallet.core.jclouds.*</namespace>
                 </testNamespaces>
               </configuration>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+
+      <profile>
+        <id>distribution</id>
+        <build>
+          <plugins>
+            <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <executions>
+                <!-- override the default execution inherited from project -->
+                <execution>
+                  <id>jar-with-dependencies</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>single</goal>
+                  </goals>
+                  <configuration>
+                    <descriptors>
+                      <descriptor>core-jar-with-dependencies-descriptor.xml</descriptor>
+                    </descriptors>
+                  </configuration>
+                </execution>
+              </executions>
             </plugin>
           </plugins>
         </build>
